- gam performance iteration (1.8-19, Sept 2017)

1.8-21

* When functions were added to families within mgcv some very large 
  environments could end up attached to those functions, for no good reason.
  fix.family.link, fix.family.var and fix.family.ls now avoid this, resulting 
  in smaller gam obects on disk and lower R memory usage. 
  Thanks to Niels Richard Hansen for uncovering this. 

1.8-20

* bam(,discrete=TRUE) could produce garbage with ti(x,z,k=c(6,5),mc=c(T,F))
  because tensor re-ordering for efficiency failed to re-order mc (this is 
  a *very* specialist bug!). Thanks to Fabian Scheipl.  

* plot(...,residuals=TRUE) weighted the working residuals by the sqrt working 
  weights divided by the mean sqrt working weight. The standardization by the 
  mean sqrt weight was non standard and has been removed.

* Fix to bad bug in bam(...,discrete=TRUE) offset handling, and predict.bamd 
  modified to avoid failure predicting with offset. Thanks to Paul Shearer.

* fix of typo in bgam.fit, which caused failure of extended families
  when dataset larger than chunk size. Thanks Martijn Wieling.

* bam(...,discrete=TRUE)/bgam.fitd modified to use fisher weights with 
  extended families if rho!=0.

1.8-19

** bam() now accepts extended families (i.e. nb, tw, ocat etc)

* cox.ph now allows stratification (i.e. baseline hazard can differ between 
  groups). 

* Example code for matched case control in ?cox.ph was just plain wrong. Now
  fixed. Thanks to Patrick Farrell.  

* bam(...,discrete=TRUE) tolerance for judging whether smoothing parameters 
  are on boundary was far too low, so that sps could become so large that 
  numerical instability set in. Fixed. Thanks to Paul Rosenfield.

* p.type!=0 removed in summary.gam (previously deprecated)

* single penalty tensor product smooths removed (previously deprecated).

* gam(...,optimizer="perf") deprecated.

* extra divergence check added to bam gam default gam fitting (similar to
  discrete method). 
